# documat

./: .classpath  .gitignore  .project  CMakeLists.txt  README.md  README.txt  appunti.txt  guiprop.prop  lineeDiComandoAvvioClientServer.txt  pom.xml  properties.prop  requirements.txt
DeploymentClientSide/: DocuMat.lnk  avvioClient.bat  guiprop.prop
DeploymentClientSide/icons/: DMIcon.xar
DeploymentServerSide/: avvioServerSide  pdfconversion  properties.prop  server.policy
DeploymentServerSide/stopWordsFiles/: Italian
_codeql_build_dir/: documat
db/: creationScriptForFirebird.sql  creationScriptForMySQL.sql  documat.gdb  fbaddusers  mysqlUsersCreation.sh
db/CVS/: Entries  Repository
doc/: elementGroupRel.dia  groupsJoiningDynamic.dia  manuale.odt
doc/CVS/: Entries  Repository  Tag
doc/arcmanagement/: Classific.html  DirScanner.html  ElabException.html  FileInfoRecord.html  GlobalCollector.html  ValidationException.html  package-frame.html  package-summary.html  package-tree.html  package-use.html
documat-client/: pom.xml
documat-server/: pom.xml
icons/: downArrow.fig  leftArrow.fig  occhio.fig  rightArrow.fig  upArrow.fig
icons/CVS/: Entries  Repository
lib/CVS/: Entries  Repository
scripts/CVS/: Entries  Repository
src/: main.cpp  module-info.java
src/CVS/: Entries  Repository
src/analysis/: Psynthesis.java  TextSkimmer.java
src/arcmanagement/: BackgroundTask.java  Classific.java  DirScanner.java  ElabException.java  FileContent.java  FileInfoRecord.java  FileInserter.java  Searcher.java  (+4 more)
stopWordsFiles/: Catalan  German  Polish
(+166 files in other folders)
